--- a/templates/index.html
+++ b/templates/index.html
@@ -23,11 +23,32 @@
                 <button type="button" id="stop" class="btn btn-danger btn-lg btn-block mt-3">STOP</button>
                 <button type="button" id="single" class="btn btn-primary btn-lg btn-block mt-3">SINGLE</button>
                 <button type="button" id="save" class="btn btn-info btn-lg btn-block mt-3">SAVE</button>
-                <button type="button" id="upload" class="btn btn-info btn-lg btn-block mt-3">UPLOAD</button>
+                <button type="button" id="get" class="btn btn-info btn-lg btn-block mt-3">GET</button>
                 <h1 class="mt-3">Log</h1>
                 <div class="overflow-auto" style="height: 200px" id="log">
                     <div>Log will appear here</div>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <h1>Send Query</h1>
+            </div>
+            <div class="col-6">
+                <h1>Result</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6" id="query">
+                <form>
+                    <div class="form-group">
+                        <label for="inputQuery">Command</label>
+                        <input type="text" class="form-control" id="inputQuery" placeholder="Example: /cmd/LIM">
+                    </div>
+                    <button type="submit" class="btn btn-primary" id="queryButton">Submit</button>
+                </form>
+            </div>
+            <div class="col-6" id="result">
             </div>
         </div>
     </div>
