--- a/templates/index.html
+++ b/templates/index.html
@@ -13,10 +13,13 @@
 <body>
     <div class="container mt-5" id="main">
         <div class="row">
+            <!-- graph area -->
             <div class="col-9">
                 <h1>Plot</h1>
                 <div id="graph" style="width: 800px; height: 600px"></div>
             </div>
+
+            <!-- control area -->
             <div class="col-3">
                 <h1>Control</h1>
                 <button type="button" id="start" class="btn btn-success btn-lg btn-block mt-3">START</button>
@@ -25,11 +28,14 @@
                 <button type="button" id="save" class="btn btn-info btn-lg btn-block mt-3">SAVE</button>
                 <button type="button" id="get" class="btn btn-info btn-lg btn-block mt-3">GET</button>
                 <h1 class="mt-3">Log</h1>
+                <!-- Logging -->
                 <div class="overflow-auto" style="height: 200px" id="log">
                     <div>Log will appear here</div>
                 </div>
             </div>
         </div>
+
+        <!-- Query Form -->
         <div class="row">
             <div class="col-6">
                 <h1>Send Query</h1>
@@ -63,6 +69,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
+    
+    <!-- custom script -->
     <script src="/static/script.js"></script>
 </body>
 
